# Cpp_qt_ultrasound_processing

./: .gitignore  CMakeLists.txt
Firststage_read/Ultrasonic_dataset_reader/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  Ultrasonic_dataset_reader.pro  slicewidget.cpp  slicewidget.h  ssh_key  ssh_key.pub  ultrasound_cscan_process.cpp  ultrasound_cscan_process.h  utils.cpp  utils.h
Firststage_read/Ultrasonic_dataset_reader/.qtc_clangd/: compile_commands.json
Firststage_read/Ultrasonic_dataset_reader/.qtc_clangd/.cache/clangd/index/: fftw3.h.721ADB63328D1AB3.idx  fftw3.h.75FD6D21EF302955.idx  fstream.943A6DA4699FF8D1.idx  main.cpp.D5EB0D9005C6002E.idx  npy.hpp.9EE02DF51F70ECB3.idx  npy.hpp.A97EE774E7C85583.idx  ostream.84E80B404D05E154.idx  qcoreapplication.h.676354B6EB0F772C.idx  qcustomplot.cpp.5F101D504B1F30CB.idx  qcustomplot.cpp.6B51E3AF8F440030.idx  qcustomplot.h.2B208A51FCDD381F.idx  qcustomplot.h.335B1E03E97ED2A5.idx  qcustomplot.h.D1B774B84B5A4285.idx  qevent.h.A264D82CB721C70C.idx  qflags.h.BDBD18B36FD7FCD7.idx  qlayout.h.FA041EABE8F6B944.idx  qshareddata.h.A73C73BDE9C4C7F3.idx  qtmetamacros.h.D3DF302E2B593093.idx  qtypeinfo.h.32521362D6236628.idx  qvarlengtharray.h.F39E094D55DDE9E6.idx  qwindowdefs.h.A52F47D7F816B81A.idx  stddef.h.A7461BBA3A1BF70E.idx  stdio.h.38586BCA99051192.idx.tmp.7403dd29  trimdialog.cpp.57DC2024C81F944B.idx  trimdialog.cpp.82925DA38C1A96C1.idx  trimdialog.h.9EAB291756900FC4.idx  trimdialog.h.CCB9C7F75DEEC02E.idx  ultrasound_cscan_process.cpp.0CD7C9673F83EFB6.idx  (+2 more)
test/test_cmake/: CMakeLists.txt
(+334 files in other folders)
